fixing shovel's place z-index so it can drop.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2632,7 +2632,7 @@
 
   /* line 72, ../sass/_downstairs.scss */
   .places .shovel {
-    z-index: 3 !important;
+    z-index: 7 !important;
   }
 
   /* line 73, ../sass/_downstairs.scss */
